// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders <Title /> without throwing 1`] = `
.c3 {
  font-size: 80%;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  color: rgba(73,73,73,1);
  line-height: 1.125rem;
  font-size: 0.8125rem;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c5 {
  background-color: rgb(216,216,216);
  margin: 0;
  height: 0.0625rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

.c1 {
  margin-right: 0.375rem;
}

.c4 {
  margin-top: 0.375rem;
  margin-bottom: 2.625rem;
}

<div
  className=""
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      />
    </div>
    <small
      className="c3"
    />
  </div>
  <div
    className="c4"
  >
    <div
      className="c5 c6"
      height="0.0625rem"
    />
  </div>
</div>
`;

exports[`renders <Title icon="NameIcon"/> without throwing 1`] = `
.c3 {
  font-size: 80%;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  color: rgba(73,73,73,1);
  line-height: 1.125rem;
  font-size: 0.8125rem;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c5 {
  background-color: rgb(216,216,216);
  margin: 0;
  height: 0.0625rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

.c1 {
  margin-right: 0.375rem;
}

.c4 {
  margin-top: 0.375rem;
  margin-bottom: 2.625rem;
}

<div
  className=""
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <svg
          className=""
          height="21.91"
          innerRef={undefined}
          style={
            Object {
              "transform": "rotate(0deg)",
            }
          }
          viewBox="0 0 21.48 21.91"
          width="21.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20.91,12.51a.76.76,0,0,0-1.17-.16l-.91.77.42-2.19c.12-.59-.51-1.24-1.1-.85L13.83,13c.11-.71.22-1.42.32-2.13a.75.75,0,0,0-1.37-.58l-4.31,6.4Q9.88,12,11.28,7.36c.51-1.69,2.81-6.23.05-7.23C8.87-.76,6.15,3.21,4.93,4.8A29.09,29.09,0,0,0,0,14.9a.75.75,0,0,0,1.45.4A28,28,0,0,1,4.65,7.85,28.22,28.22,0,0,1,7.11,4.48C7.7,3.8,11,.1,11,3.23a23.53,23.53,0,0,1-1.28,4.2c-.42,1.41-.85,2.81-1.27,4.21Q7,16.32,5.59,21A.75.75,0,0,0,7,21.57l5.24-7.78-.08.52c-.09.59.5,1.25,1.1.85l4.24-2.82c-.17.84-.33,1.68-.49,2.52a.76.76,0,0,0,1.25.73l1.72-1.45a2.59,2.59,0,0,1-.21,1.75c-.33.91,1.12,1.3,1.45.4A4.4,4.4,0,0,0,20.91,12.51Z"
            fill="rgba(73, 73, 73, 1)"
          />
        </svg>
      </div>
    </div>
    <small
      className="c3"
    />
  </div>
  <div
    className="c4"
  >
    <div
      className="c5 c6"
      height="0.0625rem"
    />
  </div>
</div>
`;

exports[`renders <Title icon="Test" label="Instance name"/> without throwing 1`] = `
.c3 {
  font-size: 80%;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  color: rgba(73,73,73,1);
  line-height: 1.125rem;
  font-size: 0.8125rem;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c5 {
  background-color: rgb(216,216,216);
  margin: 0;
  height: 0.0625rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

.c1 {
  margin-right: 0.375rem;
}

.c4 {
  margin-top: 0.375rem;
  margin-bottom: 2.625rem;
}

<div
  className=""
  label="Instance name"
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <svg
          className=""
          height="21.91"
          innerRef={undefined}
          style={
            Object {
              "transform": "rotate(0deg)",
            }
          }
          viewBox="0 0 21.48 21.91"
          width="21.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20.91,12.51a.76.76,0,0,0-1.17-.16l-.91.77.42-2.19c.12-.59-.51-1.24-1.1-.85L13.83,13c.11-.71.22-1.42.32-2.13a.75.75,0,0,0-1.37-.58l-4.31,6.4Q9.88,12,11.28,7.36c.51-1.69,2.81-6.23.05-7.23C8.87-.76,6.15,3.21,4.93,4.8A29.09,29.09,0,0,0,0,14.9a.75.75,0,0,0,1.45.4A28,28,0,0,1,4.65,7.85,28.22,28.22,0,0,1,7.11,4.48C7.7,3.8,11,.1,11,3.23a23.53,23.53,0,0,1-1.28,4.2c-.42,1.41-.85,2.81-1.27,4.21Q7,16.32,5.59,21A.75.75,0,0,0,7,21.57l5.24-7.78-.08.52c-.09.59.5,1.25,1.1.85l4.24-2.82c-.17.84-.33,1.68-.49,2.52a.76.76,0,0,0,1.25.73l1.72-1.45a2.59,2.59,0,0,1-.21,1.75c-.33.91,1.12,1.3,1.45.4A4.4,4.4,0,0,0,20.91,12.51Z"
            fill="rgba(73, 73, 73, 1)"
          />
        </svg>
      </div>
    </div>
    <small
      className="c3"
    />
  </div>
  <div
    className="c4"
  >
    <div
      className="c5 c6"
      height="0.0625rem"
    />
  </div>
</div>
`;

exports[`renders <Title label="Test"/> without throwing 1`] = `
.c3 {
  font-size: 80%;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  color: rgba(73,73,73,1);
  line-height: 1.125rem;
  font-size: 0.8125rem;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c5 {
  background-color: rgb(216,216,216);
  margin: 0;
  height: 0.0625rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
}

.c1 {
  margin-right: 0.375rem;
}

.c4 {
  margin-top: 0.375rem;
  margin-bottom: 2.625rem;
}

<div
  className=""
  label="Test"
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      />
    </div>
    <small
      className="c3"
    />
  </div>
  <div
    className="c4"
  >
    <div
      className="c5 c6"
      height="0.0625rem"
    />
  </div>
</div>
`;
